--- a/src/main/resources/com/example/ricochet_robot/draft.fxml
+++ b/src/main/resources/com/example/ricochet_robot/draft.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Spinner?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="1000.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ricochet_robot.GameController">
+<AnchorPane prefHeight="1000.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ricochet_robot.GameController">
    <children>
       <GridPane fx:id="boardPane" gridLinesVisible="true" layoutX="14.0" layoutY="14.0" prefHeight="700.0" prefWidth="700.0">
          <columnConstraints>
@@ -116,5 +109,9 @@
             <Font name="System Bold" size="50.0" />
          </font>
       </Label>
+      <Button layoutX="856.0" layoutY="637.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="906.0" layoutY="664.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="811.0" layoutY="664.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="856.0" layoutY="691.0" mnemonicParsing="false" text="Button" />
    </children>
 </AnchorPane>
